@@ -1,13 +1,12 @@
 package com.elmakers.mine.bukkit.utility.random;
 
-import java.util.ArrayDeque;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.Deque;
 import java.util.List;
 import java.util.Random;
 import java.util.Set;
+import java.util.SplittableRandom;
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 
@@ -25,7 +24,7 @@ import com.elmakers.mine.bukkit.utility.StringUtils;
 public class RandomUtils {
     private static final Random random = new Random();
 
-    public static float lerp(String[] list, int levelIndex, int nextLevelIndex, float distance) {
+    public static float lerp(String[] list, int levelIndex, int nextLevelIndex, double distance) {
         if (list.length == 0) return 0;
         if (levelIndex >= list.length) return Float.parseFloat(list[list.length - 1]);
         if (nextLevelIndex >= list.length) return Float.parseFloat(list[list.length - 1]);
@@ -34,16 +33,50 @@ public class RandomUtils {
         return lerp(previousValue, nextValue, distance);
     }
 
-    @SuppressWarnings("unchecked")
-    public static <T extends Number> T lerp(T previousValue, T nextValue, float distance) {
-        return (T)(Number)((Float)previousValue + distance * ((Float)nextValue - (Float)previousValue));
+    public static int lerp(int min, int max, double value) {
+        if (max == min) return min;
+        if (min > max) {
+            int temp = min;
+            min = max;
+            max = temp;
+        }
+        return (int)Math.round((double)min + value * (double) (max - min));
+    }
+
+    public static long lerp(long min, long max, double value) {
+        if (max == min) return min;
+        if (min > max) {
+            long temp = min;
+            min = max;
+            max = temp;
+        }
+        return (long)Math.round((double)min + value * (double) (max - min));
+    }
+
+    public static double lerp(double min, double max, double value) {
+        if (max == min) return min;
+        if (min > max) {
+            double temp = min;
+            min = max;
+            max = temp;
+        }
+        return min + value * (max - min);
+    }
+
+    public static float lerp(float min, float max, double value) {
+        return (float)(min + value * (max - min));
     }
 
     @Nullable
-    public static <T extends Object> T weightedRandom(Deque<WeightedPair<T>> weightList) {
+    public static <T extends Object> T weightedRandom(List<WeightedPair<T>> weightList) {
+        return weightedRandom(random, weightList);
+    }
+
+    @Nullable
+    public static <T extends Object> T weightedRandom(Random random, List<WeightedPair<T>> weightList) {
         if (weightList == null || weightList.size() == 0) return null;
 
-        Float maxWeight = weightList.getLast().getThreshold();
+        Float maxWeight = weightList.get(weightList.size() - 1).getThreshold();
         Float selectedWeight = random.nextFloat() * maxWeight;
         for (WeightedPair<T> weight : weightList) {
             if (selectedWeight < weight.getThreshold()) {
@@ -51,11 +84,11 @@ public class RandomUtils {
             }
         }
 
-        return weightList.getFirst().getValue();
+        return weightList.get(0).getValue();
     }
 
     @Nonnull
-    public static <T extends Object> Collection<T> getValues(Deque<WeightedPair<T>> weightList) {
+    public static <T extends Object> Collection<T> getValues(List<WeightedPair<T>> weightList) {
         List<T> list = new ArrayList<>();
         for (WeightedPair<T> pair : weightList) {
             list.add(pair.getValue());
@@ -63,15 +96,15 @@ public class RandomUtils {
         return list;
     }
 
-    public static void populateIntegerProbabilityMap(Deque<WeightedPair<Integer>> probabilityMap, ConfigurationSection nodeMap, int levelIndex, int nextLevelIndex, float distance) {
+    public static void populateIntegerProbabilityMap(List<WeightedPair<Integer>> probabilityMap, ConfigurationSection nodeMap, int levelIndex, int nextLevelIndex, float distance) {
         RandomUtils.populateProbabilityMap(ValueParser.INTEGER, probabilityMap, nodeMap, levelIndex, nextLevelIndex, distance);
     }
 
-    public static void populateIntegerProbabilityMap(Deque<WeightedPair<Integer>> probabilityMap, ConfigurationSection nodeMap) {
+    public static void populateIntegerProbabilityMap(List<WeightedPair<Integer>> probabilityMap, ConfigurationSection nodeMap) {
         RandomUtils.populateProbabilityMap(ValueParser.INTEGER, probabilityMap, nodeMap, 0, 0, 0);
     }
 
-    public static void populateIntegerProbabilityMap(Deque<WeightedPair<Integer>> probabilityMap, ConfigurationSection parent, String key, int levelIndex, int nextLevelIndex, float distance) {
+    public static void populateIntegerProbabilityMap(List<WeightedPair<Integer>> probabilityMap, ConfigurationSection parent, String key, int levelIndex, int nextLevelIndex, float distance) {
         if (parent.isConfigurationSection(key)) {
             populateProbabilityMap(ValueParser.INTEGER, probabilityMap, parent.getConfigurationSection(key), levelIndex, nextLevelIndex, distance);
         } else if (parent.isInt(key)) {
@@ -81,11 +114,11 @@ public class RandomUtils {
         }
     }
 
-    public static void populateStringProbabilityMap(Deque<WeightedPair<String>> probabilityMap, ConfigurationSection nodeMap, int levelIndex, int nextLevelIndex, float distance) {
+    public static void populateStringProbabilityMap(List<WeightedPair<String>> probabilityMap, ConfigurationSection nodeMap, int levelIndex, int nextLevelIndex, float distance) {
         RandomUtils.populateProbabilityMap(ValueParser.STRING, probabilityMap, nodeMap, levelIndex, nextLevelIndex, distance);
     }
 
-    public static void populateStringProbabilityMap(Deque<WeightedPair<String>> probabilityMap, ConfigurationSection parent, String key, int levelIndex, int nextLevelIndex, float distance) {
+    public static void populateStringProbabilityMap(List<WeightedPair<String>> probabilityMap, ConfigurationSection parent, String key, int levelIndex, int nextLevelIndex, float distance) {
         if (parent.isConfigurationSection(key)) {
             populateProbabilityMap(ValueParser.STRING, probabilityMap, parent.getConfigurationSection(key), levelIndex, nextLevelIndex, distance);
         } else {
@@ -93,27 +126,27 @@ public class RandomUtils {
         }
     }
 
-    public static void populateStringProbabilityMap(Deque<WeightedPair<String>> probabilityMap, ConfigurationSection parent, String key) {
+    public static void populateStringProbabilityMap(List<WeightedPair<String>> probabilityMap, ConfigurationSection parent, String key) {
         populateStringProbabilityMap(probabilityMap, parent, key, 0, 0,0);
     }
 
-    public static void populateStringProbabilityMap(Deque<WeightedPair<String>> probabilityMap, ConfigurationSection nodeMap) {
+    public static void populateStringProbabilityMap(List<WeightedPair<String>> probabilityMap, ConfigurationSection nodeMap) {
         RandomUtils.populateProbabilityMap(ValueParser.STRING, probabilityMap, nodeMap, 0, 0, 0);
     }
 
-    public static Deque<WeightedPair<String>> createStringProbabilityMap(ConfigurationSection parent, String key) {
+    public static List<WeightedPair<String>> createStringProbabilityMap(ConfigurationSection parent, String key) {
         return createProbabilityMap(ValueParser.STRING, parent, key);
     }
 
-    public static void populateStringProbabilityList(Deque<WeightedPair<String>> probabilityMap, List<String> stringList) {
+    public static void populateStringProbabilityList(List<WeightedPair<String>> probabilityMap, List<String> stringList) {
         populateProbabilityList(ValueParser.STRING, probabilityMap, stringList);
     }
 
-    public static void populateFloatProbabilityMap(Deque<WeightedPair<Float>> probabilityMap, ConfigurationSection nodeMap, int levelIndex, int nextLevelIndex, float distance) {
+    public static void populateFloatProbabilityMap(List<WeightedPair<Float>> probabilityMap, ConfigurationSection nodeMap, int levelIndex, int nextLevelIndex, float distance) {
         RandomUtils.populateProbabilityMap(ValueParser.FLOAT, probabilityMap, nodeMap, levelIndex, nextLevelIndex, distance);
     }
 
-    public static void populateFloatProbabilityMap(Deque<WeightedPair<Float>> probabilityMap, ConfigurationSection parent, String key, int levelIndex, int nextLevelIndex, float distance) {
+    public static void populateFloatProbabilityMap(List<WeightedPair<Float>> probabilityMap, ConfigurationSection parent, String key, int levelIndex, int nextLevelIndex, float distance) {
         if (parent.isConfigurationSection(key)) {
             populateProbabilityMap(ValueParser.FLOAT, probabilityMap, parent.getConfigurationSection(key), levelIndex, nextLevelIndex, distance);
         } else if (parent.isDouble(key) || parent.isInt(key)) {
@@ -123,22 +156,22 @@ public class RandomUtils {
         }
     }
 
-    public static void populateFloatProbabilityMap(Deque<WeightedPair<Float>> probabilityMap, ConfigurationSection nodeMap) {
+    public static void populateFloatProbabilityMap(List<WeightedPair<Float>> probabilityMap, ConfigurationSection nodeMap) {
         RandomUtils.populateProbabilityMap(ValueParser.FLOAT, probabilityMap, nodeMap, 0, 0, 0);
     }
 
-    public static <T extends Object> Deque<WeightedPair<T>> createProbabilityConstant(T value) {
+    public static <T extends Object> List<WeightedPair<T>> createProbabilityConstant(T value) {
         if (value == null) return null;
-        Deque<WeightedPair<T>> probability = new ArrayDeque<>();
+        List<WeightedPair<T>> probability = new ArrayList<>();
         probability.add(new WeightedPair<>(value));
         return probability;
     }
 
-    public static <T extends Object> void populateProbabilityConstant(ValueParser<T> parser, Deque<WeightedPair<T>> probabilityMap, String value) {
+    public static <T extends Object> void populateProbabilityConstant(ValueParser<T> parser, List<WeightedPair<T>> probabilityMap, String value) {
         probabilityMap.add(new WeightedPair<>(1.0f, 1.0f, value, parser));
     }
 
-    public static <T extends Object> void populateProbabilityList(ValueParser<T> parser, Deque<WeightedPair<T>> probabilityMap, List<String> keys) {
+    public static <T extends Object> void populateProbabilityList(ValueParser<T> parser, List<WeightedPair<T>> probabilityMap, List<String> keys) {
         if (keys != null) {
             float currentThreshold = 0;
             for (String key : keys) {
@@ -148,22 +181,22 @@ public class RandomUtils {
         }
     }
 
-    public static <T extends Object>  Deque<WeightedPair<T>> createProbabilityMap(ValueParser<T> parser, ConfigurationSection parent, String key) {
+    public static <T extends Object> List<WeightedPair<T>> createProbabilityMap(ValueParser<T> parser, ConfigurationSection parent, String key) {
         if (parent.get(key) == null) return null;
-        Deque<WeightedPair<T>> probability = new ArrayDeque<>();
+        List<WeightedPair<T>> probability = new ArrayList<>();
         populateProbabilityMap(parser, probability, parent, key);
         return probability;
     }
 
-    public static <T extends Object> void populateProbabilityMap(ValueParser<T> parser, Deque<WeightedPair<T>> probabilityMap, ConfigurationSection nodeMap) {
+    public static <T extends Object> void populateProbabilityMap(ValueParser<T> parser, List<WeightedPair<T>> probabilityMap, ConfigurationSection nodeMap) {
         RandomUtils.populateProbabilityMap(parser, probabilityMap, nodeMap, 0, 0, 0);
     }
 
-    public static <T extends Object> void populateProbabilityMap(ValueParser<T> parser, Deque<WeightedPair<T>> probabilityMap, ConfigurationSection parent, String key) {
+    public static <T extends Object> void populateProbabilityMap(ValueParser<T> parser, List<WeightedPair<T>> probabilityMap, ConfigurationSection parent, String key) {
         populateProbabilityMap(parser, probabilityMap, parent, key, 0, 0, 0);
     }
 
-    public static <T extends Object> void populateProbabilityMap(ValueParser<T> parser, Deque<WeightedPair<T>> probabilityMap, ConfigurationSection parent, String key, int levelIndex, int nextLevelIndex, float distance) {
+    public static <T extends Object> void populateProbabilityMap(ValueParser<T> parser, List<WeightedPair<T>> probabilityMap, ConfigurationSection parent, String key, int levelIndex, int nextLevelIndex, float distance) {
         if (parent.isConfigurationSection(key)) {
             populateProbabilityMap(parser, probabilityMap, parent.getConfigurationSection(key), levelIndex, nextLevelIndex, distance);
         } else {
@@ -171,7 +204,7 @@ public class RandomUtils {
         }
     }
 
-    public static <T extends Object> void populateProbabilityMap(ValueParser<T> parser, Deque<WeightedPair<T>> probabilityMap, ConfigurationSection nodeMap, int levelIndex, int nextLevelIndex, float distance) {
+    public static <T extends Object> void populateProbabilityMap(ValueParser<T> parser, List<WeightedPair<T>> probabilityMap, ConfigurationSection nodeMap, int levelIndex, int nextLevelIndex, float distance) {
         Float currentThreshold = 0.0f;
 
         if (nodeMap != null) {
@@ -198,17 +231,17 @@ public class RandomUtils {
         }
     }
 
-    public static <T extends Object> Deque<WeightedPair<T>> merge(Deque<WeightedPair<T>> base, Deque<WeightedPair<T>> inherit) {
+    public static <T extends Object> List<WeightedPair<T>> merge(List<WeightedPair<T>> base, List<WeightedPair<T>> inherit) {
         if (inherit == null || inherit.size() == 0) {
             return base;
         }
         if (base == null) {
-            base = new ArrayDeque<>();
+            base = new ArrayList<>();
         }
         if (base.size() == 0) {
             base.addAll(inherit);
         } else {
-            WeightedPair<T> lastPair = base.getLast();
+            WeightedPair<T> lastPair = base.get(base.size() - 1);
             float threshold = lastPair.getThreshold();
             for (WeightedPair<T> inheritPair : inherit) {
                 float weight = inheritPair.getThreshold();
@@ -230,28 +263,18 @@ public class RandomUtils {
 
     public static void extrapolateFloatList(List<AscendingPair<Float>> list)
     {
-        RandomUtils.extrapolateList(list);
-    }
-
-    public static void extrapolateIntegerList(List<AscendingPair<Integer>> list)
-    {
-        RandomUtils.extrapolateList(list);
-    }
-
-    public static <T extends Number> void extrapolateList(List<AscendingPair<T>> list)
-    {
         Collections.sort(list);
         int index = 0;
         while (index < list.size() - 1) {
-            AscendingPair<T> current = list.get(index);
-            AscendingPair<T> next = list.get(index + 1);
+            AscendingPair<Float> current = list.get(index);
+            AscendingPair<Float> next = list.get(index + 1);
             long currentIndex = current.getIndex();
             long nextIndex = next.getIndex();
 
             index++;
             if (nextIndex > currentIndex + 1) {
                 float distance = 1f / (nextIndex - currentIndex);
-                AscendingPair<T> inserted = new AscendingPair<>(currentIndex + 1, lerp(current.getValue(), next.getValue(), distance));
+                AscendingPair<Float> inserted = new AscendingPair<>(currentIndex + 1, lerp(current.getValue(), next.getValue(), distance));
                 list.add(index, inserted);
             }
         }
@@ -271,6 +294,11 @@ public class RandomUtils {
     }
 
     public static <T> T getRandom(List<T> list) {
+        return getRandom(list, random);
+    }
+
+    public static <T> T getRandom(List<T> list, Random random) {
+        if (list.isEmpty()) return null;
         return list.get(random.nextInt(list.size()));
     }
 
@@ -278,11 +306,85 @@ public class RandomUtils {
         return random;
     }
 
-    public static int getRandomIntInclusive(int start, int stop) {
-        return random.nextInt(stop - start + 1) + start;
-    }
-
     public static boolean checkProbability(double probability) {
         return probability >= random.nextDouble();
+    }
+
+    public static double range(Random random, double min, double max) {
+        if (min >= max) {
+            return min;
+        }
+        return min + random.nextDouble(max - min);
+    }
+
+    public static int range(Random random, int min, int max) {
+        if (min >= max) {
+            return min;
+        }
+        // Bounds is exclusive but we want to include it
+        return min + random.nextInt(max - min + 1);
+    }
+
+    public static long range(Random random, long min, long max) {
+        if (min >= max) {
+            return min;
+        }
+        // Bounds is exclusive but we want to include it
+        return min + random.nextLong(max - min + 1);
+    }
+
+    public static int range(int min, int max) {
+        return range(random, min, max);
+    }
+
+    public static double range(double min, double max) {
+        return range(random, min, max);
+    }
+
+    public static SplittableRandom getStableRandom(long worldSeed, int chunkX, int chunkZ) {
+        final long chunkSeed = worldSeed
+                ^ (long) chunkX * 0x9E3779B97F4A7C15L
+                ^ (long) chunkZ * 0xD1B54A32D192ED03L;
+        return new SplittableRandom(chunkSeed);
+    }
+
+    @Nullable
+    public static <T> T getDistanceWeighted(List<DistanceWeightedValue<T>> options, long worldSeed, int chunkX, int chunkZ) {
+        double totalWeight = 0;
+        final int x = chunkX * 16;
+        final int z = chunkZ * 16;
+        for (DistanceWeightedValue<T> entry : options) {
+            totalWeight += entry.getWeight(x, z);
+        }
+        if (totalWeight == 0) {
+            return null;
+        }
+
+        double weight = getStableRandom(worldSeed, chunkX, chunkZ).nextDouble(totalWeight);
+        for (DistanceWeightedValue<T> entry : options) {
+            double entryWeight = entry.getWeight(x, z);
+            if (entryWeight <= 0) {
+                continue;
+            }
+            weight -= entryWeight;
+            if (weight <= 0) {
+                return entry.getValue();
+            }
+        }
+        // Should never happen
+        return null;
+    }
+
+    public static float applyRotation(float targetRot, float rot, float rotationSpeed) {
+        while (targetRot - rot < -180.0F) {
+            rot -= 360.0F;
+        }
+
+        while (targetRot - rot >= 180.0F) {
+            rot += 360.0F;
+        }
+
+        final float rotDelta = targetRot - rot;
+        return rot + Math.signum(rotDelta) * Math.min(rotationSpeed, Math.abs(rotDelta));
     }
 }
